[package]
name = "spire-game-server"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy_ecs = "0.15"
bytes = { version = "1", default-features = false }
deadpool-postgres = "0.14"
jsonwebtoken = "9"
nalgebra = "0.33"
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"

[build-dependencies]
glob = "0.3.2"
prost-build = "0.13.5"
