[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
macros = { path = "macros" }
protocol = { path = "../protocol/rs" }

bevy_ecs = "0.15"
bytes = { version = "1", default-features = false }
deadpool-postgres = "0.14"
jsonwebtoken = "9"
nalgebra = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.27", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
